# cad_viewer

./: CHANGELOG.md  Cargo.toml  README.md
examples/: cube.off
src/: args.rs  main.rs
src/gpu_data/: buffer.rs  gpu_data.rs  gpu_mesh.rs  mod.rs
src/viewer/: bbox.rs  camera.rs  camera_data.rs  gl_call.rs  mod.rs  renderer.rs  shader.rs  viewer.rs
src/viewer/shaders/: shader.frag  shader.vert
