[package]
name = "cad_viewer"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = ["sraesch"]

description = "A simple CAD viewer for visualizing 3D/CAD data based on the cad_import library."
documentation = "https://docs.rs/cad_viewer/"
repository = "https://github.com/raw-bytes/cad_viewer"

keywords = ["3D", "CAD", "import", "scene", "viewer"]
categories = ["rendering"]

edition = "2021"

[dependencies]
anyhow = "1.0"
nalgebra-glm = "0.3"
log = "0.4"
cad_import = "0.2"
simple-logging = "2.0"
glow = "0.12"
glutin = "0.28"
